[gd_scene load_steps=4 format=3 uid="uid://iud28gsa6i8m"]

[ext_resource type="Script" path="res://scripts/objectscripts/rock.gd" id="1_lppbf"]
[ext_resource type="Texture2D" uid="uid://c3yxk4wyngfuh" path="res://assets/sprites/objects/spr_rock1.png" id="2_8hbf7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5bhnm"]
radius = 11.0

[node name="Rock" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_lppbf")

[node name="RockSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8hbf7")

[node name="RockCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5bhnm")

[node name="Bounce_Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Bounce_Timer" to="." method="_on_bounce_timer_timeout"]
